package com.sai.backend.entity.enums;

public enum CreationMode {
    manual, ai
}
